--- a/css/styles.css
+++ b/css/styles.css
@@ -482,6 +482,47 @@ body {
   height: 20px;
   fill: var(--basecolor1);
 }
+
+/* form email */
+.form-email {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+.form-email-title {
+  font-style: bold;
+  font-size: 14px;
+  line-height: 1, 14;
+  color: var(--basecolor1);
+  margin-bottom: 20px;
+}
+.form-email-button {
+  justify-content: center;
+  width: 200px;
+  height: 50px;
+  background-color: var(--basecolor3hover);
+  border-radius: 4px;
+  margin-left: 12px;
+  text-align: center;
+  padding-bottom: 10px;
+  color: var(--basecolor1);
+}
+.email-input {
+  width: 358px;
+  height: 50px;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  border-radius: 4px;
+  background-color: #2f303a;
+  color: var(--basecolor1);
+  padding-left: 16px;
+}
+.form-email-field input {
+  margin: 0;
+}
+.form-email-icon {
+  fill: var(--basecolor1);
+  transform: translateY(5px);
+}
 /* ---main---- */
 .main {
   padding-top: 94px;
@@ -620,7 +661,7 @@ body {
   position: absolute;
   top: 50%;
   left: 50%;
-
+  padding: 40px;
   width: 528px;
   height: 581px;
   background-color: var(--basecolor1);
@@ -657,42 +698,81 @@ body {
 .icon-close {
   fill: var(--basecolor2);
 }
-/* form email */
-.form-email {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
+.button-modal:hover > .icon-close {
+  fill: var(--basecolor3hover);
 }
-.form-email-title {
-  font-style: bold;
-  font-size: 14px;
-  line-height: 1, 14;
-  color: var(--basecolor1);
+
+.modal-form-title {
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1.15;
+  letter-spacing: 3%;
+  text-align: center;
   margin-bottom: 20px;
 }
-.form-email-button {
-  justify-content: center;
+.modal-input {
+  font-weight: 12px;
+  margin-bottom: 20px;
+  width: 100%;
+  height: 40px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  padding-left: 42px;
+}
+.modal-form-btn {
+  display: block;
+  margin: 0 auto;
   width: 200px;
   height: 50px;
-  background-color: var(--basecolor3hover);
-  border-radius: 4px;
-  margin-left: 12px;
-  text-align: center;
-  padding-bottom: 10px;
   color: var(--basecolor1);
-}
-.email-input {
-  width: 358px;
-  height: 50px;
-  border: 1px solid rgba(255, 255, 255, 0.3);
+  background-color: var(--basecolor3hover);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
-  background-color: #2f303a;
+  margin-top: 20px;
 }
-.form-email-field input {
-  margin: 0;
-  padding-left: 16px;
+.modal-form-btn:hover,
+.modal-form-btn:focus {
+  background-color: #188ce8;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
 }
-.form-email-icon {
-  fill: var(--basecolor1);
-  transform: translateY(5px);
+.form-title-input {
+  position: relative;
+  display: block;
+  margin-bottom: 5px;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.17;
+  color: #757575;
+}
+.modal-input-checkbox {
+}
+
+.checkbox-modal {
+  display: flex;
+  align-items: center;
+  padding-left: 20px;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.17;
+  color: #757575;
+}
+.modal-input-textarea {
+  height: 100px;
+  resize: none;
+  padding: 10px 20px;
+}
+.modal-icon {
+  position: absolute;
+  top: 30px;
+  left: 15px;
+}
+.text-link-checkbox {
+  text-decoration: underline;
+  color: var(--basecolor3hover);
+}
+.modal-input:focus ~ .modal-icon {
+  color: var(--basecolor3hover);
+  border-color: var(--basecolor3hover);
 }
