--- a/css/styles.css
+++ b/css/styles.css
@@ -712,13 +712,15 @@ body {
 }
 .modal-input {
   font-weight: 12px;
-  margin-bottom: 20px;
   width: 100%;
-  height: 40px;
+  max-height: 40px;
+  padding-top: 12px;
+  padding-bottom: 12px;
+  padding-left: 42px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
-  padding-left: 42px;
 }
+
 .modal-form-btn {
   display: block;
   margin: 0 auto;
@@ -737,14 +739,22 @@ body {
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
 }
-.form-title-input {
+.modal-form-field {
   position: relative;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 10px;
+}
+
+.form-title-input {
   display: block;
+  box-sizing: border-box;
   margin-bottom: 5px;
   font-weight: 400;
   font-size: 12px;
   line-height: 1.17;
   color: #757575;
+  cursor: pointer;
 }
 .modal-input-checkbox {
 }
@@ -759,7 +769,7 @@ body {
   color: #757575;
 }
 .modal-input-textarea {
-  height: 100px;
+  min-height: 120px;
   resize: none;
   padding: 10px 20px;
 }
@@ -767,12 +777,12 @@ body {
   position: absolute;
   top: 30px;
   left: 15px;
+  fill: var(--basecolor2);
 }
 .text-link-checkbox {
-  text-decoration: underline;
   color: var(--basecolor3hover);
+  padding-right: 5px;
 }
-.modal-input:focus ~ .modal-icon {
-  color: var(--basecolor3hover);
-  border-color: var(--basecolor3hover);
+.modal-input ~ .modal-icon {
+  fill: var(--basecolor3hover);
 }
