--- a/css/styles.css
+++ b/css/styles.css
@@ -719,6 +719,11 @@ body {
   padding-left: 42px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
+  cursor: pointer;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-input:focus {
+  border-color: var(--basecolor3hover);
 }
 
 .modal-form-btn {
@@ -732,6 +737,8 @@ body {
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   margin-top: 20px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-form-btn:hover,
 .modal-form-btn:focus {
@@ -754,19 +761,38 @@ body {
   font-size: 12px;
   line-height: 1.17;
   color: #757575;
-  cursor: pointer;
 }
 .modal-form-field-checkbox {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.icon-checkbox {
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: inline-block;
+  width: 16px;
+  height: 15px;
+  border: 2px solid var(--basecolor2);
+  border-radius: 2px;
+  cursor: pointer;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-input-checkbox {
+  appearance: none;
+  -moz-appearance: none;
+  -webkit-appearance: none;
+  position: absolute;
 }
 
 .checkbox-modal {
-  display: flex;
-  align-items: center;
+  position: relative;
   padding-left: 20px;
   font-weight: 400;
-  font-size: 12px;
+  font-size: 14px;
   line-height: 1.17;
   color: #757575;
 }
@@ -780,6 +806,7 @@ body {
   top: 50%;
   left: 15px;
   fill: var(--basecolor2);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .text-link-checkbox {
   color: var(--basecolor3hover);
@@ -787,4 +814,11 @@ body {
 }
 .modal-input:focus ~ .modal-icon {
   fill: var(--basecolor3hover);
+}
+.modal-input-checkbox:checked + .icon-checkbox {
+  background-color: var(--basecolor3hover);
+  background-image: url(../images/iconcheck.svg);
+  background-size: contain;
+  background-origin: border-box;
+  border-color: var(--basecolor3hover);
 }
