--- a/css/styles.css
+++ b/css/styles.css
@@ -487,7 +487,6 @@ body {
 .form-email {
   display: block;
   margin-left: auto;
-  margin-right: auto;
 }
 .form-email-title {
   font-style: bold;
@@ -722,7 +721,8 @@ body {
   cursor: pointer;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.modal-input:focus {
+.modal-input:focus,
+.modal-input:hover {
   border-color: var(--basecolor3hover);
 }
 
